# bnfc

./:  .travis.yml  .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  Dockerfile  Dockerfile.test  INSTALL  Makefile  README.md  cabal.haskell-ci  cabal.project  flake.nix  stack-7.10.3.yaml  stack-7.8.4.yaml  stack-8.0.2.yaml  stack-8.10.2.yaml  stack-8.10.3.yaml  stack-8.10.4.yaml  stack-8.10.7.yaml  stack-8.10.yaml  stack-8.2.2.yaml  stack-8.2.yaml  stack-8.4.4.yaml  stack-8.4.yaml  stack-8.6.4.yaml  stack-8.6.5.yaml  stack-8.6.yaml  stack-8.8.1.yaml  stack-8.8.2.yaml  stack-8.8.3.yaml  stack-8.8.4.yaml  stack-8.8.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.0.yaml  stack-9.10.yaml  stack-9.12.yaml  stack-9.2.2.yaml  stack-9.2.4.yaml  (+16 more)
source/: .gitignore  BNFC.cabal  BNFC.spec  CHANGELOG.md  LICENSE  Makefile  Setup.lhs  TODO  cabal.project.local  changelog  config.mk  config.mk.in  config.status  configure  configure.in  quick.sh  releases.md  runtests.sh  setenv.sh  stack-7.10.3.yaml  stack-8.10.2.yaml  stack-8.10.3.yaml  stack-8.10.4.yaml  stack-8.10.7.yaml  stack-8.10.yaml  stack-8.4.4.yaml  stack-8.6.4.yaml  stack-8.8.2.yaml  stack-8.8.3.yaml  stack-8.8.4.yaml  stack-8.8.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.0.yaml  stack-9.10.yaml  stack-9.12.yaml  stack-9.2.1.yaml  stack-9.2.4.yaml  stack-9.2.5.yaml  stack-9.2.7.yaml  (+15 more)
source/autom4te.cache/: output.0  requests  traces.0
source/compat/: Prelude'.hs
source/license-report/: Makefile
source/main/: Main.hs
source/runtime/Algebra/: RingUtils.hs
source/runtime/BNFC/Runtime/: CYKSparse.hs
source/runtime/Data/: Matrix.hs
source/runtime/Data/Matrix/: CYK.hs  Class.hs  Quad.hs  QuadGADT.hs  Tree.hs  Valiant.hs  ValiantPosition.hs
source/runtime/Parsing/: CNF.hs  Chart.hs  TestProgram.hs
source/src/: .ghci  .gitignore  AbsBNF.hs  Alex.hs  BNF.cf  BNFC.cabal  CF.hs  CHANGELOG.md  CNFTop.hs  CYKSparse.hs  ErrM.hs  GetCF.hs  LexBNF.hs  LexBNF.x  License.hs  Main.hs  Makefile  Makefile.in  Makefile_main  Makefile_prev  MultiView.hs  Options.hs  ParBNF.hs  ParBNF.y  PrintBNF.hs  Python.cf  README.md  SkelBNF.hs  TestBNF.hs  ToCNF.hs  TypeChecker.hs  Utils.hs  WarningM.hs  index.html  regexMinus.hs
source/src/BNFC/: Abs.hs  CF.hs  ErrM.hs  GetCF.hs  Lex.x  Lexing.hs  License.hs  MultiView.hs  Options.hs  Par.y  PrettyPrint.hs  Print.hs  Regex.hs  ToCNFCore.hs  TypeChecker.hs  Utils.hs  WarningM.hs  regexMinus.hs
source/src/BNFC/Backend/: Agda.hs  Antlr.hs  Antlr4.hs  Base.hs  C.hs  CSharp.hs  Common.hs  Dart.hs  FSharp.hs  GF.hs  Haskell.hs  HaskellGADT.hs  HaskellProfile.hs  Java.hs  Javascript.hs  Latex.hs  OCaml.hs  Pygments.hs  Python.hs  Scala.hs  Swift.hs  TreeSitter.hs  Txt2Tag.hs  Utils.hs  XML.hs
source/src/BNFC/Backend/Antlr/: CFtoAntlr4Lexer.hs  CFtoAntlr4Parser.hs  RegToAntlrLexer.hs  Utils.hs
source/src/BNFC/Backend/C/: CFtoBisonC.hs  CFtoCAbs.hs  CFtoCPrinter.hs  CFtoCSkel.hs  CFtoFlexC.hs  Common.hs  RegToFlex.hs
source/src/BNFC/Backend/CPP/: AbsynHeaderFile.hs  Common.hs  Makefile.hs  Naming.hs  NoSTL.hs  PrettyPrinter.hs  STL.hs
source/src/BNFC/Backend/CSharp/: CAbstoCSharpAbs.hs  CAbstoCSharpAbstractVisitSkeleton.hs  CAbstoCSharpVisitSkeleton.hs  CFtoCSharpPrinter.hs  CFtoGPLEX.hs  CFtoGPPG.hs  CSharpUtils.hs  RegToGPLEX.hs
source/src/BNFC/Backend/Common/: Makefile.hs  OOAbstract.hs  (+3 more)
source/src/BNFC/Check/: EmptyTypes.hs
source/src/Common/: Makefile.hs
source/src/Data/: Pair.hs
source/src/for-hugs/: Directory.hs
source/src/formats/: CFtoGF.hs  CFtoLatex.hs  CFtoTxt.hs  NamedVariables.hs  OOAbstract.hs
source/src/formats/c/: CFtoBisonC.hs  CFtoCAbs.hs  CFtoCPrinter.hs  CFtoCSkel.hs  CFtoFlexC.hs  CTop.hs
source/src/formats/c-sharp/: CAbstoCSharpAbs.hs  CAbstoCSharpAbstractVisitSkeleton.hs  CAbstoCSharpVisitSkeleton.hs  CFtoCSharpPrinter.hs  CFtoGPLEX.hs  CFtoGPPG.hs  CSharpTop.hs  CSharpUtils.hs  RegToGPLEX.hs
source/src/formats/cpp/: CFtoBison.hs  CFtoCPPAbs.hs  CFtoCPPPrinter.hs  CFtoCVisitSkel.hs  CFtoFlex.hs  CPPTop.hs  RegToFlex.hs
source/src/formats/cpp_stl/: CFtoBisonSTL.hs  CFtoCVisitSkelSTL.hs  CFtoSTLAbs.hs  CFtoSTLPrinter.hs  STLTop.hs  STLUtils.hs  oldCFtoSTLAbs.hs
source/src/formats/f-sharp/: FSharpTop.hs
source/src/formats/haskell-gadt/: CFtoAbstractGADT.hs  CFtoPrinterGADT.hs  CFtoTemplateGADT.hs  HaskellGADTCommon.hs  HaskellTopGADT.hs
source/src/formats/haskell2/: CFtoAbstract.hs  CFtoAlex.hs  CFtoAlex2.hs  CFtoAlex3.hs  CFtoHappy.hs  CFtoLayout.hs  CFtoPrinter.hs  CFtoTemplate.hs  HaskellTop.hs  HsOpts.hs  MkErrM.hs  MkSharedString.hs  RegToAlex.hs  ToCNF.hs
source/src/formats/java/: CFtoCup.hs  CFtoJLex.hs  CFtoJavaAbs.hs  CFtoJavaPrinter.hs  CFtoJavaSkeleton.hs  CFtoVisitSkel.hs  JavaTop.hs  RegToJLex.hs
source/src/formats/java1.5/: CFtoAbstractVisitor.hs  CFtoAllVisitor.hs  CFtoComposVisitor.hs  CFtoCup15.hs  CFtoFoldVisitor.hs  CFtoJLex15.hs  CFtoJavaAbs15.hs  CFtoJavaPrinter15.hs  CFtoVisitSkel15.hs  JavaTop15.hs
source/src/formats/ocaml/: CFtoOCamlAbs.hs  CFtoOCamlLex.hs  CFtoOCamlPrinter.hs  CFtoOCamlShow.hs  CFtoOCamlTemplate.hs  CFtoOCamlTest.hs  CFtoOCamlYacc.hs  OCamlTop.hs  OCamlUtil.hs
source/src/formats/profile/: CFtoHappyProfile.hs  Profile.hs  ProfileTop.hs
source/src/formats/xml/: CFtoXML.hs
source/src/layout/: Alfa2.cf  Makefile  README.md  ResolveLayoutAlfa.hs  Sorting.alfa  Untok.hs
source/src/tests/: unit-tests.hs
source/test/: doctests.hs  unit-tests.hs
source/test/BNFC/: CFSpec.hs  GetCFSpec.hs  Hspec.hs  OptionsSpec.hs  WarningMSpec.hs
source/test/BNFC/Backend/: BaseSpec.hs  CSpec.hs  HaskellGADTSpec.hs  HaskellSpec.hs  JavaSpec.hs  LatexSpec.hs  OCamlSpec.hs  TreeSitterSpec.hs
source/test/src/: RegressionTests.hs  ShellyTesting.hs  SystemTesting.hs  system-tests-c.hs  system-tests-cpp-no-stl.hs  system-tests-cpp.hs  system-tests-haskell-cnf.hs  system-tests-haskell-gadt.hs  system-tests-haskell.hs  system-tests-java.hs  system-tests-latex.hs  unit-tests.hs
source/test/src/BNFC/: OptionsSpec.hs
source/test/unit/: unit-tests.hs
source/test/unit/BNFC/: OptionsSpec.hs  WarningMSpec.hs
(+578 files in other folders)
